bottom itemCards not aligned fix

--- a/style.css
+++ b/style.css
@@ -94,15 +94,13 @@ pd {
     margin: auto;
     margin-top: 50px;
     overflow: auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;
 
 }
 
-table,th,td {
-    border-style:dashed;
-    border-width:1px;
-    overflow: hidden;
-     
-}
+
 
 .item{
     background-color:#E9E6E6;
@@ -113,6 +111,8 @@ table,th,td {
     align-items: center;
     margin-bottom: 40px;
     box-shadow:3px 3px 3px rgb(91, 89, 89);
+
+
 }
 
 .itemImg{
@@ -120,10 +120,9 @@ table,th,td {
 }
 .items-column {  
     
-    display: inline-block;
-    width: 25%;
-    vertical-align: top;
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 50px;
     background-color: #D9D9D9;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -133,8 +132,19 @@ table,th,td {
 
 @media (Max-width:48rem) {
     .items-column{
-        width:50%;
+       
         padding:15px
+    }
+    .parentContainer{
+        background-color: #D9D9D9;
+        max-width: 100%;
+        margin: auto;
+        margin-top: 50px;
+        overflow: auto;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 5px;
+        
     }
     
 }
@@ -225,10 +235,12 @@ width:100%
     justify-content: flex-end;
     margin-left: 80%;
     margin-top: 5px;
+    background-color: green;
 
 }
 .RemoveWish-Container{
     position: flex;
+    
     justify-content: flex-end;
     margin-left: 80%;
     margin-top: 5px;
@@ -269,7 +281,7 @@ width:100%
 
 }
 .Item-Images{
-    mix-blend-mode: color-burn;
+    /* mix-blend-mode: color-burn; */
 }
 
 .item-button{
